.github/scripts/tests/fixtures/api-impl-006/fail/swift-bad-naming/Sources/Bad Module/DynamicArray.swift
// File name `DynamicArray.swift` is a compound name without dot
// separation — VIOLATION of [API-IMPL-006]. Should be `Array.Dynamic.swift`
// per the dotted-nested-path convention.

public struct DynamicArray {
    public init() {}
}
